Tests/CompilerTests/negative/incompatible-if-branches.hylo
public fun main() {
  _ = if true { (a: ()) } else { (b: ()) }
}
