Tests/CompilerTests/negative/incompatible-if-branches.expected
negative/incompatible-if-branches.hylo:2.34-41: error: no coercion from '{b: Void}' to '{a: Void}'
  _ = if true { (a: ()) } else { (b: ()) }
                                 ~~~~~~~
